
# See also https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = pytgbb
version = 0.0.1a1.dev0
author = Arnauld Van Muysewinkel
author-email = arnauldvm@gmail.com
home-page = https://github.com/arnauldvm/pytgbb
description = A Python library for emulating Tabletop Games Building Blocks
long-description = file: README.md, ANALYSIS.md, CHANGELOG.md, LICENSE
license = GPLv3
license-file = LICENSE
platform = any
keywords = tabletop-games building-blocks library
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3.5
    Topic :: Games/Entertainment :: Board Games
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.5
test_suite = tests
setup_requires =
    setuptools